# unity-mirror-rs

./: .gitignore  Cargo.toml  metadata_settings.json  mirror.version.txt
demo_game_server/: Cargo.toml  metadata_settings.json
demo_game_server/src/: main.rs
demo_game_server/src/backend_metadata/: box.rs  projectile.rs  tank.rs
demo_game_server/src/scripts/: box.rs  mod.rs  projectile.rs  tank.rs
old-macro/: Cargo.toml  README.md
old-macro/src/: lib.rs  namespace.rs  string_case.rs
old-macro/src/component/: component.rs  component2.rs  mod.rs  state2.rs
old-macro/src/metadata_settings/: wrapper.rs
src/: lib.rs
src/commons/: action.rs  as_any.rs  delegate.rs  mod.rs  namespace.rs  object.rs  reference.rs  revel_arc.rs  revel_weak.rs  self_action.rs  string_case.rs  to_hex_string.rs  trace.rs  virtual_helper.rs
src/commons/action/: action.rs  mod.rs  self_action.rs  self_mut_action.rs
src/metadata/: component.rs
src/metadata_settings/: metadata.rs  mod.rs  wrapper.rs
src/metadata_settings/mirror/: metadata_network_identity.rs  metadata_network_manager.rs  metadata_network_root_manager.rs  mod.rs
src/metadata_settings/unity/: capsule_collider.rs  collider.rs  metadata_asset.rs  metadata_component.rs  metadata_prefab.rs  metadata_scene.rs  metadata_transform.rs  mod.rs  rigid_body.rs
src/mirror/: accurate_interval.rs  compress.rs  connect.rs  mod.rs  namespace.rs  network_authenticator.rs  network_authenticator_factory.rs  network_behaviour.rs  network_behaviour_factory.rs  network_behaviour_trait.rs  network_connection.rs  network_connection_to_client.rs  network_connection_trait.rs  network_identity.rs  network_loop.rs  network_manager.rs  network_manager_factory.rs  network_manager_trait.rs  network_reader.rs  network_reader_pool.rs  network_room_manager.rs  network_server.rs  network_time.rs  network_writer.rs  network_writer_pool.rs  pool.rs  remote_calls.rs  stable_hash.rs  sync_list.rs  sync_object.rs  transport.rs
src/mirror/authenticator/: authenticator.rs  basic_authenticator.rs  mod.rs
src/mirror/batching/: batcher.rs  mod.rs  un_batcher.rs  un_batcher_pool.rs
src/mirror/component/: component_deserializer.rs  component_factory.rs  component_serializer.rs  mod.rs  state.rs  sync_object.rs
src/mirror/components/: mod.rs  network_animator.rs  network_behaviour.rs  network_room_player.rs  network_test.rs
src/mirror/core/: messages.rs  mod.rs  network_behaviour.rs  network_connection.rs  network_connection_to_client.rs  network_identity.rs  network_reader.rs  network_reader_extensions.rs  network_reader_pool.rs  network_writer.rs  network_writer_extensions.rs  network_writer_pool.rs  remote_calls.rs  sync_list.rs  sync_object.rs  transport.rs
src/mirror/messages/: add_player_message.rs  change_owner_message.rs  command_message.rs  entity_state_message.rs  message.rs  mod.rs  network_ping_message.rs  network_pong_message.rs  not_ready_message.rs  object_destroy_message.rs  object_hide_message.rs  (+7 more)
src/transports/: kcp2k2_transport.rs  mod.rs
src/unity/: world_manager.rs
src/unity-mirror-rs-macro/: .gitignore  Cargo.toml
src/unity_engine/: game_looper.rs  game_object.rs  mod.rs  mono_behaviour.rs  mono_behaviour_factory.rs  player_looper.rs  scene.rs  time.rs  transform.rs  world.rs
unity-mirror-macro/: Cargo.toml
unity-mirror-macro-rs/: Cargo.toml
unity-mirror-macro-rs/src/: action.rs  callback_processor.rs  extends.rs  internal.rs  lib.rs  namespace.rs  network_behaviour.rs  network_manager.rs  network_manager_factory.rs  network_message.rs  virtual_shroud.rs  virtual_trait.rs
unity-mirror-macro-rs/src/metadata_settings/: wrapper.rs  wrapper_register.rs
unity-mirror-macro-rs/src/mirror/: authenticator_factory.rs
unity-mirror-macro-rs/src/mirror/component/: client_rpc.rs  command.rs  target_rpc.rs
unity-mirror-macro-rs/src/utils/: attribute_contain.rs  csharp.rs  mod.rs
unity-mirror-macro/src/: network_behaviour.rs
unity-mirror-rs-macro/: Cargo.toml
unity-mirror-rs-macro/src/: action.rs  callback_processor.rs  callbacks.rs  command.rs  component.rs  lib.rs  m_sync.rs  message.rs  namespace.rs  network_behaviour.rs  network_behaviour_state.rs  network_manager.rs  network_manager_factory.rs  network_message.rs  rpc.rs  synced.rs  tools.rs  utils.rs  virtual_helper.rs  virtual_trait.rs
(+87 files in other folders)
