[package]
name = "unity-mirror-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Unity Mirror Networking Server Only Rust"
homepage = "https://unity-mirror-rs.github.io"
documentation = "https://unity-mirror-rs.github.io/doc/"
repository = "https://github.com/xintujing/unity-mirror-rs"
readme = "README.md"

exclude = []

[dependencies]
kcp2k_rust = { git = "https://github.com/xtjsk/kcp2k-rust.git" }
unity-mirror-macro = { path = "unity-mirror-rs-macro" }
lazy_static = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_repr = "0.1.20"
convert_case = "0.8.0"
paste = "1.0.15"
serde_json = "1.0.140"
once_cell = "1.21.3"
ctor = "0.4.1"
indexmap = { version = "2.9.0", features = ["serde"] }
nalgebra = "0.33.2"
backtrace = "0.3.74"
log = "0.4.27"
uuid = { version = "1.13.1", features = ["v4"] }
env_logger = "0.11.8"
colored = "3.0.0"
chrono = "0.4.41"
rand = "0.9.1"
ordered-float = "5.0.0"
http = "1.3.1"
hostname = "0.4.1"
bytes = "1.10.1"
