[package]
name = "unity-mirror-rs"
version = "0.1.0-beta"
edition = "2021"
license = "MIT"
description = "Unity Mirror Networking Server Only Rust"
homepage = "https://unity-mirror-rs.github.io"
documentation = "https://unity-mirror-rs.github.io/doc/"
repository = "https://github.com/xintujing/unity-mirror-rs"
readme = "README.md"

exclude = [
    "./demo_game_server",
    "./unity-mirror-macro-rs"
]

[dependencies]
kcp2k = "0.0.1-beta"
unity-mirror-macro-rs = "0.1.0-beta"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"
serde_json = "1.0.140"
once_cell = "1.21.3"
ctor = "0.4.2"
nalgebra = "0.33.2"
backtrace = "0.3.75"
log = "0.4.27"
rand = "0.9.1"
ordered-float = "5.0.0"
http = "1.3.1"
hostname = "0.4.1"
bytes = "1.10.1"


[profile.release]
opt-level = 3
debug = false
strip = true
lto = true