[package]
name = "demo_game_server"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
colored = "3.0.0"
ctor = "0.4.2"
delegate = "0.13.3"
env_logger = "0.11.8"
log = "0.4.27"
unity-mirror-rs = { path = "../../unity-mirror-rs" }
serde = { version = "1.0.217", features = ["derive"] }
nalgebra = "0.33.2"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
strip = true
lto = true
incremental = false
panic = "abort"