[package]
name = "unity-mirror-rs-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.98", features = ["full"] }
quote = "1.0.38"
proc-macro2 = "1.0.93"
uuid = { version = "1.4", features = ["v4", "serde"] }
convert_case = "0.8.0"
paste = "1.0.15"
