[package]
name = "unity-mirror-macro-rs"
version = "0.1.0-beta"
edition = "2021"
license = "MIT"
description = "Unity Mirror Networking Server Only Rust"
homepage = "https://unity-mirror-rs.github.io"
documentation = "https://unity-mirror-rs.github.io/doc/"
repository = "https://github.com/xintujing/unity-mirror-rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.98", features = ["full"] }
quote = { version = "1.0.38" }
proc-macro2 = { version = "1.0.93" }
rand = { version = "0.9.1" }
